--- a/gerrit-httpd/src/main/resources/com/google/gerrit/httpd/raw/HostPage.html
+++ b/gerrit-httpd/src/main/resources/com/google/gerrit/httpd/raw/HostPage.html
@@ -30,7 +30,7 @@
         }
       })();
     </script>
-    <script id="gerrit_hostpagedata"></script>
+    <script id="_hpd"></script>
     <style  id="gerrit_sitecss" type="text/css"></style>
     <link rel="icon" type="image/gif" href="favicon.ico" />
   </head>
