--- a/gerrit-httpd/src/main/resources/com/google/gerrit/httpd/raw/HostPage.html
+++ b/gerrit-httpd/src/main/resources/com/google/gerrit/httpd/raw/HostPage.html
@@ -50,5 +50,6 @@
     </div>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
     <script id="gerrit_module"></script>
+    <form id="auth_inputs" style="display:none;visibility:hidden;"></form>
   </body>
 </html>
