Fix issues detected by 'JSHint' and 'JSCS'
Change-Id: Ia535be02d19f09e716f00ec8819ba785010798f7

--- a/polygerrit-ui/app/elements/gr-diff-preferences.html
+++ b/polygerrit-ui/app/elements/gr-diff-preferences.html
@@ -157,7 +157,9 @@ limitations under the License.
         },
       },
 
-      observers: [ '_prefsChanged(prefs.*)' ],
+      observers: [
+        '_prefsChanged(prefs.*)',
+      ],
 
       _prefsChanged: function(changeRecord) {
         var prefs = changeRecord.base;
