--- a/polygerrit-ui/app/test/index.html
+++ b/polygerrit-ui/app/test/index.html
@@ -23,7 +23,8 @@ limitations under the License.
 <script>
   var testFiles = [];
 
-  [ 'gr-account-dropdown-test.html',
+  [
+    'gr-account-dropdown-test.html',
     'gr-account-label-test.html',
     'gr-account-link-test.html',
     'gr-avatar-test.html',
