Fix issues detected by 'JSHint' and 'JSCS'
Change-Id: Ia535be02d19f09e716f00ec8819ba785010798f7

--- a/polygerrit-ui/app/elements/gr-app.html
+++ b/polygerrit-ui/app/elements/gr-app.html
@@ -194,7 +194,9 @@ limitations under the License.
         'title-change': '_handleTitleChange',
       },
 
-      observers: [ '_viewChanged(params.view)' ],
+      observers: [
+        '_viewChanged(params.view)',
+      ],
 
       get loggedIn() {
         return !!(this.account && Object.keys(this.account).length > 0);
@@ -215,7 +217,7 @@ limitations under the License.
           dashboardView: {
             selectedChangeIndex: 0,
           },
-        }
+        };
       },
 
       _accountChanged: function() {
