--- a/polygerrit-ui/app/elements/gr-diff-side.html
+++ b/polygerrit-ui/app/elements/gr-diff-side.html
@@ -174,7 +174,9 @@ limitations under the License.
         'tap': '_tapHandler',
       },
 
-      observers: [ '_prefsChanged(prefs.*)' ],
+      observers: [
+        '_prefsChanged(prefs.*)',
+      ],
 
       rowInserted: function(index) {
         this.renderLineIndexRange(index, index);
@@ -243,7 +245,7 @@ limitations under the License.
           return row.height;
         }
 
-        var selector = '[data-index="' + index + '"]'
+        var selector = '[data-index="' + index + '"]';
         var els = Polymer.dom(this.root).querySelectorAll(selector);
         if (els.length != 2) {
           throw Error('Rows should only consist of two elements');
@@ -537,7 +539,7 @@ limitations under the License.
 
           var htmlEndIndex = 0;
           if (hl.endIndex != null) {
-            for (var j = 0; j < hl.endIndex; j++) {
+            for (var k = 0; k < hl.endIndex; k++) {
               htmlEndIndex = this._advanceChar(html, htmlEndIndex);
             }
           } else {
@@ -564,7 +566,7 @@ limitations under the License.
           if (numChars > 0 && numChars % this.prefs.line_length == 0) {
             indices.push(htmlIndex);
           }
-          htmlIndex = this._advanceChar(html, htmlIndex)
+          htmlIndex = this._advanceChar(html, htmlIndex);
           if (content[i] == '\t') {
             numChars += this.prefs.tab_size;
           } else {
@@ -576,14 +578,14 @@ limitations under the License.
         // Since the result string is being altered in place, start from the end
         // of the string so that the insertion indices are not affected as the
         // result string changes.
-        for (var i = indices.length - 1; i >= 0; i--) {
-          result = result.slice(0, indices[i]) + this._lineFeedHTML +
-              result.slice(indices[i]);
+        for (var j = indices.length - 1; j >= 0; j--) {
+          result = result.slice(0, indices[j]) + this._lineFeedHTML +
+              result.slice(indices[j]);
           linesLeft--;
         }
         // numLines is the total number of lines this code block should take up.
         // Fill in the remaining ones.
-        for (var i = 0; i < linesLeft; i++) {
+        for (var k = 0; k < linesLeft; k++) {
           result += this._lineFeedHTML;
         }
         return result;
