--- a/polygerrit-ui/app/elements/gr-diff-view.html
+++ b/polygerrit-ui/app/elements/gr-diff-view.html
@@ -197,7 +197,7 @@ limitations under the License.
       _handleKey: function(e) {
         if (this.shouldSupressKeyboardShortcut(e)) { return; }
 
-        switch(e.keyCode) {
+        switch (e.keyCode) {
           case 219:  // '['
             e.preventDefault();
             this._navToFile(this._fileList, -1);
@@ -212,7 +212,7 @@ limitations under the License.
             // Values can only be strings.
             window.sessionStorage.setItem(
                 'changeView.showReplyDropdown', 'true');
-            // No break here. Allow to fall through.
+            /* falls through */ // required by JSHint
           case 85:  // 'u'
             if (this._changeNum) {
               e.preventDefault();
@@ -293,7 +293,7 @@ limitations under the License.
       },
 
       _computeChangeDetailQueryParams: function() {
-        return { O: this.listChangesOptionsToHex(
+        return {O: this.listChangesOptionsToHex(
             this.ListChangesOption.ALL_REVISIONS
         )};
       },
