--- a/polygerrit-ui/app/elements/gr-diff-view.html
+++ b/polygerrit-ui/app/elements/gr-diff-view.html
@@ -155,6 +155,11 @@ limitations under the License.
           type: Object,
           value: function() { return document.body; },
         },
+        changeViewState: {
+          type: Object,
+          notify: true,
+          value: function() { return {}; },
+        },
 
         _patchRange: Object,
         _change: Object,
@@ -164,7 +169,10 @@ limitations under the License.
           type: Array,
           value: function() { return []; },
         },
-        _path: String,
+        _path: {
+          type: String,
+          observer: '_pathChanged',
+        },
         _loggedIn: {
           type: Boolean,
           value: false,
@@ -208,9 +216,7 @@ limitations under the License.
           case 65:  // 'a'
             if (!this._loggedIn) { return; }
 
-            // Values can only be strings.
-            window.sessionStorage.setItem(
-                'changeView.showReplyDropdown', 'true');
+            this.set('changeViewState.showReplyDropdown', true);
             // No break here. Allow to fall through.
           case 85:  // 'u'
             if (this._changeNum) {
@@ -264,6 +270,13 @@ limitations under the License.
         }
 
         this.$.diff.reload();
+      },
+
+      _pathChanged: function(path) {
+        if (this._fileList.length == 0) { return; }
+
+        this.set('changeViewState.selectedFileIndex',
+            this._fileList.indexOf(path));
       },
 
       _computeDiffURL: function(changeNum, patchRange, path) {
