Initial add of related changes to the change view
Bug: Issue 3856
Change-Id: Ib322ee3535cb02964bb75054480b3334ea2e351a

--- a/polygerrit-ui/app/test/index.html
+++ b/polygerrit-ui/app/test/index.html
@@ -45,6 +45,7 @@ limitations under the License.
     'gr-message-test.html',
     'gr-messages-list-test.html',
     'gr-patch-range-select-test.html',
+    'gr-related-changes-list-test.html',
     'gr-reply-dropdown-test.html',
     'gr-reviewer-list-test.html',
     'gr-search-bar-test.html',
