Add the change download dialog
Bug: Issue 3878
Change-Id: Ib485f9a92bc4559d33c67dc8ffa750a65eb58c1c

--- a/polygerrit-ui/app/test/index.html
+++ b/polygerrit-ui/app/test/index.html
@@ -40,6 +40,7 @@ limitations under the License.
     'gr-diff-side-test.html',
     'gr-diff-test.html',
     'gr-diff-view-test.html',
+    'gr-download-dialog-test.html',
     'gr-file-list-test.html',
     'gr-linked-text-test.html',
     'gr-message-test.html',
